# itrustee_client

./: CMakeLists.txt  Makefile  README.en.md  README.md
include/: tee_client_api.h  tee_client_constants.h  tee_client_ext_api.h  tee_client_id.h  tee_client_list.h  tee_client_log.h  tee_client_type.h
include/cloud/: tee_client_log.h  tee_session_pool.h
src/agentd/: agentd.c
src/authentication/: tee_auth_common.c  tee_auth_common.h  tee_get_native_cert.c  tee_get_native_cert.h
src/common/: dir.c  dir.h  tee_custom_log.c  tee_version_check.c  tee_version_check.h
src/inc/: cap_bit.h  secfile_load_agent.h  tc_ns_client.h  tee_client_inner.h  tee_client_version.h  tee_custom_log.h  tee_log.h  tee_sys_log.h
src/libteec_vendor/: tee_client_api.c  tee_client_app_load.c  tee_client_app_load.h  tee_client_ext_api.c  tee_client_socket.c  tee_client_socket.h  tee_load_sec_file.c  tee_load_sec_file.h  tee_session_pool.c
src/tee_teleport/: cgroup_util.h  portal.c  portal.h  run.c  run.h  scp.c  scp.h  tee_teleport.c  tee_teleport.h
src/tee_teleport/posix_proxy/include/: common.h  fd_list.h  posix_ctrl_handler.h  posix_data_handler.h  posix_proxy.h  serialize.h
src/tee_teleport/posix_proxy/include/xtasklet/: blocking_queue.h  cross_tasklet.h  thread_pool.h
src/tee_teleport/posix_proxy/src/: common.c  fd_list.c  posix_ctrl_handler.c  posix_data_handler.c  posix_file.c  posix_network.c  posix_other.c  posix_proxy.c  serialize.c
src/tee_teleport/posix_proxy/src/xtasklet/: blocking_queue.c  cross_tasklet.c  thread_pool.c
src/teecd/: CMakeLists.txt  fs_work_agent.c  fs_work_agent.h  misc_work_agent.c  misc_work_agent.h  secfile_load_agent.c  secfile_load_agent.h  system_ca_auth.c  system_ca_auth.h  tee_agent.c  tee_agent.h  tee_ca_auth.c  tee_ca_auth.h  tee_ca_daemon.c  tee_ca_daemon.h  tee_load_dynamic.c  tee_load_dynamic.h  teecd.c  teecd.h
src/tlogcat/: CMakeLists.txt  proc_tag.c  proc_tag.h  read_ktrace.c  read_ktrace.h  sys_log_api.h  sys_syslog_cfg.c  tarzip.c  tarzip.h  tlogcat.c  tlogcat.h
